[tool.poetry]
name = "streamlit-app"
version = "0.1.0"
description = "fetch weather data from met.api.no"
authors = ["yosiefTecleab <yosieftecleab@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.31.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
